<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.login.viewmodel.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_40"
            tools:context=".LoginActivity">

            <TextView
                android:id="@+id/header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:text="@string/s_."
                android:textColor="@color/red"
                android:textSize="@dimen/sp_34"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/header2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:text="@string/first_few_steps"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header1" />

            <TextView
                android:id="@+id/pan_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:text="@string/pan_number"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header2" />


            <EditText
                android:id="@+id/et_pan_number"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginEnd="@dimen/dp_40"
                android:background="@drawable/round_border_pan_edittext"
                android:inputType="textCapCharacters"
                android:maxLength="10"
                android:onTextChanged="@{viewmodel::onPANChanged}"
                android:paddingStart="@dimen/dp_4"
                android:paddingEnd="@dimen/dp_4"
                android:text="@={viewmodel.PAN}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pan_number" />

            <TextView
                android:id="@+id/tv_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_40"
                android:layout_marginEnd="@dimen/dp_40"
                android:text="@string/birth_date"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pan_number" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="@dimen/dp_40"
                android:orientation="horizontal"
                android:weightSum="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_birth_date">

                <EditText
                    android:id="@+id/et_day"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_weight=".3"
                    android:background="@drawable/round_border_dob_edittext"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:onTextChanged="@{viewmodel::onDayChanged}"
                    android:text="@={viewmodel.day}" />

                <EditText
                    android:id="@+id/et_month"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_weight=".3"
                    android:background="@drawable/round_border_dob_edittext"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:onTextChanged="@{viewmodel::onMonthChanged}"
                    android:text="@={viewmodel.month}" />

                <EditText
                    android:id="@+id/et_year"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dp_48"
                    android:layout_marginStart="@dimen/dp_8"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_weight=".4"
                    android:background="@drawable/round_border_dob_edittext"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:onTextChanged="@{viewmodel::onYearChanged}"
                    android:text="@={viewmodel.year}" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/providing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_80"
                android:layout_marginEnd="@dimen/dp_40"
                android:text="@string/policy"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear" />

            <Button
                android:id="@+id/buttonPanel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_48"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_40"
                android:enabled="@{viewmodel.btnSelected}"
                android:text="@string/next"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/providing" />

            <TextView
                android:id="@+id/tv_dont_have_pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_40"
                android:gravity="center"
                android:textColor="@color/purple_500"
                android:text="@string/dont_have_pan"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonPanel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>